--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             src: local('Qaranta Bold'), local('Qaranta-Bold'),
                  url('QarantaBold.woff2') format('woff2'),
                  url('QarantaBold.woff') format('woff'),
-                 url('QarantaBold.ttf') format('truetype');
+                 url('Qaranta Bold.otf') format('truetype');
             font-weight: bold;
             font-style: normal;
             font-display: swap;
